# n_gramm_training

./: README.md  n-gram.py  pyproject.toml  treebank.py
